tests/paczka1/fuzzy1/72796925.err
Error in line 17: S643 A470 62,9
Error in line 33: HbsWdF4Yp A12 26,2
Error in line 24: S643 S593 85,4
Error in line 25: GJ2RipM A12 24,5
